[1.19] better wording - faq/faq17.html

--- a/faq/faq17.html
+++ b/faq/faq17.html
@@ -39,8 +39,8 @@ FAQ - Виртуальные частные сети (VPN)
 
 <h2 id="introduction">Вступление</h2>
 
-OpenBSD поставляется с <a href="https://man.openbsd.org/iked">iked(8)</a>,
-современным IKEv2 сервером, поддерживаемым разделение привилегий. 
+OpenBSD поставляется с <a href="https://man.openbsd.org/iked">iked(8)</a>
+- современным IKEv2 сервером, поддерживаемым разделение привилегий.
 Он может использоваться как сервер, принимающий запросы на
 соединение,  или как клиент, инициирующий соединение с сервером.
 Утилита <a href="https://man.openbsd.org/ikectl">ikectl(8)</a>
@@ -206,7 +206,7 @@ esp tunnel from 198.51.100.1 to 192.0.2.1 spi 0xb1fc90b8 auth hmac-sha2-256 enc 
       IP-адреса, которому можно доверять.
 </ul>
 
-Если для сторон VPN-соединения удаленная внутренняя сеть должна быть в
+Если для обоих сторон VPN-соединения удаленная внутренняя сеть должна быть в
 зоне досигаемости, или наоборот -- из внутренней сети должны быть доступны
 разные стороны VPN, должны быть установленны дополнительные flows с обеих
 сторон:
@@ -249,9 +249,10 @@ ikev2 'server2_rsa' active esp \
 
 <p>
 В зависимости от варианта использования, поскольку весь трафик
-будет проходить через респондера, необходимо убедиться, что инициатор
+будет проходить через респондера, необходимо убедиться, что клиент
+(инициатор создания соединения)
 настроен на использование DNS-сервера, к которому он сможет обращаться
-(возможно, один на ответчике).
+(возможно, один на стороне респондера).
 
 <h3 id="clientopenbsd">С клиентом OpenBSD</h3>
 
@@ -263,9 +264,10 @@ ikev2 'server2_rsa' active esp \
 <p>
 Как и в предыдущем примере, обмена предоставляемых по умолчанию открытых
 ключей RSA достаточно для настройки простой аутентификации между
-ответчиком и инициатором: <code>/etc/iked/local.pub</code> из первой системы
-(«server1») должен быть скопирован в
-<code>/etc/iked/pubkeys/fqdn/server1.domain</code> на второй системе («roadwarrior»).
+обоими сторонами соединения:
+<code>/etc/iked/local.pub</code> из первой системы («server1») должен быть
+скопирован в <code>/etc/iked/pubkeys/fqdn/server1.domain</code> на второй системе
+(«roadwarrior»).
 Затем <code>/etc/iked/local.pub</code> из системы roadwarrior необходимо
 скопировать в <code>/etc/iked/pubkeys/fqdn/roadwarrior</code> на первую
 систему. Замените «serverX.domain» своим собственным полным доменным именем.
@@ -286,7 +288,7 @@ ikev2 'responder_rsa' passive esp \
         tag "ROADW"
 </pre>
 
-Responder должен предоставить инициатору IP-адрес.
+Он так же должен предоставить клиенту(инициатору соедиения) IP-адрес.
 Это настраивается при помощи директивы <code>config</code>.
 При использовании параметра <code>config address</code>,
 <code>to dynamic</code> будет заменен назначенным динамическим IP-адресом.
@@ -303,8 +305,8 @@ pass log on enc0 tagged ROADW
 match out log on $ext_if inet tagged ROADW nat-to $ext_if
 </pre>
 
-Инициатор конфигурирует глобальный поток для отправки всего своего трафика
-респонденту, говоря ему идентифицировать себя с ключом с именем "roadwarrior":
+Инициатор конфигурирует глобальный flow для отправки всего своего трафика
+респонденту, ассоциируя себя с ключом "roadwarrior":
 
 <pre class="cmdbox">
 ikev2 'roadwarrior' active esp \
@@ -320,17 +322,16 @@ ikev2 'roadwarrior' active esp \
 для запроса динамического IP-адреса у ответчика.
 Параметр <code>iface lo1</code> указывает интерфейс, для которого
 будут установлены полученный адрес и соответствующие маршруты.
-
-Ответчик должен иметь правильную конфигурацию NAT для "roadwarrior".
+Ответчик должен иметь правильную NAT-конфигурацию для "roadwarrior".
 
 <p>
 Изящная остановка VPN на стороне инициатора может быть достигнута
 при помощи <code>ikectl decouple</code> (<code>iked</code> все еще
-работает, ожидает соединения <code>ikectl couple</code>
-так что он снова подключается к респонденту) или при помощи i
+работает, ожидает <code>ikectl couple</code> чтобы он повторно
+подключился к ответчику) или при помощи
 <code>ikectl reset sa &amp;&amp; rcctl stop iked</code>
-для окончательной остановки <code>iked</code> и обеспечения
-отсутствия потоков.
+для незамедлительной остановки <code>iked</code> и чтобы
+гарантировать остановку flows.
 
 <h3 id="clientandroid">Клиент для Android</h3>
 
@@ -339,8 +340,9 @@ ikev2 'roadwarrior' active esp \
 <a href="https://www.strongswan.org/">strongSwan</a>.
 
 <p>
-Также необходимо настроить сертификаты PKI и X.509,
-чтобы инициатор мог проверить сертификат, объявленный респондентом:
+Также необходимо настроить в системе испрользованиее PKI- и
+X.509-сертификатов, чтобы инициатор мог проверить подлинность
+ответной стороны (респондера):
 
 <pre class="cmdbox">
 server1# <b>ikectl ca vpn create</b>
@@ -359,14 +361,14 @@ server1# <b>cp /etc/iked/ca/ca.crt /var/www/htdocs/</b>
 инициатора для ответчика:
 
 <ul>
-  <li>EAP с именем пользователя / паролем
+  <li>EAP с именем пользователя и паролем
   <li>Сертификат X.509
 </ul>
 
 <h4 id="autheap">Использование MSCHAP-V2 для EAP аутентификации</h4>
 
-Конфигурация респондента должна указать список имен
-пользователя/пароля и использовать <code>eap "mschap-v2"</code>
+Конфигурация ответчика должна содержать список имен
+пользователей и их пароли, и использовать <code>eap "mschap-v2"</code>
 (который пока является единственным поддерживаемым методом EAP):
 
 <pre class="cmdbox">
@@ -381,7 +383,7 @@ ikev2 'responder_eap' passive esp \
         tag "ROADW"
 </pre>
 
-В клиенте strongSwan новый профиль настраивается с помощью:
+В клиенте strongSwan новый профиль настраивается при помощи:
 
 <ul>
   <li><i>IKEv2 EAP</i>для типа VPN
@@ -394,25 +396,23 @@ ikev2 'responder_eap' passive esp \
       (в разделе «Дополнительные настройки»)
 </ul>
 
-При этом устройство Android может подключаться к респонденту, 
-аутентифицировать сертификат респондента с помощью сертификата CA, 
-аутентифицировать себя для респондента с помощью логина / пароля EAP,
-получать адрес в сети 
-<code>10.0.5.0/24</code>, 
-и весь его трафик уходит. через VPN, используя 
-<code>192.0.2.1</code>
-качестве своего DNS-сервера.
+Используя эту конфигурацию устройство Android (клиент) сможет подключаться
+к ответчику, аутентифицировать его сертификат при помощи сертификата CA,
+аутентифицировать себя при помощи EAP логина/пароля, и
+получать адрес в сети <code>10.0.5.0/24</code>. После этого весь его
+трафик пойдет через VPN, используя <code>192.0.2.1</code> в качестве
+своего DNS-сервера.
 
-<h4 id="authx509">Использование аутентификации сертификата X.509</h4>
+<h4 id="authx509">Использование аутентификации на основе X.509 сертификатов</h4>
 
-Для этого метода сертификат создается для клиента, устанавливается в
-<code>iked ca</code>, экспортируется в виде архива, и файл .pfx 
-должен быть доступен в Интернете, чтобы клиент мог его установить. 
+Для этого метода сертификат генерируется для клиента, устанавливается в
+<code>iked ca</code>, экспортируется в виде архива, и .pfx-файл
+должен быть доступен online, чтобы клиент мог его установить.
 Пакеты файлов .pfx:
 
 <ul>
   <li>сертификат X.509
-  <li>закрытый ключ X.509, зашифрованный с помощью RSA
+  <li>закрытый ключ X.509, зашифрованный при помощи RSA
   <li>закрытый ключ RSA, используемый для шифрования закрытого ключа X.509
   <li>открытый ключ RSA
 </ul>
@@ -425,13 +425,12 @@ server1# <b>tar -C /tmp -xzf client1.domain.tgz *pfx</b>
 server1# <b>cp /tmp/export/client1.domain.pfx /var/www/htdocs/client1.domain.pfx</b>
 </pre>
 
-Публичный сертификат CA и пакет клиентских сертификатов должны
+Открытый CA-сертификат и пакет клиентских сертификатов должны
 быть импортированы в клиенте strongSwan при настройке нового профиля.
 
 <p>
-Конфигурация респондента немного проще, так как нет необходимости указывать
-<code>eap</code>
-или устанавливать имя пользователя / пароль:
+Конфигурация ответной стороны немного проще, так как нет необходимости
+указывать <code>eap</code> или устанавливать имя пользователя/пароль:
 
 <pre class="cmdbox">
 ikev2 'responder_x509' passive esp \
@@ -454,46 +453,35 @@ ikev2 'responder_x509' passive esp \
   <li><code>server1.domain</code> в поле <i>Server identity</i>
 </ul>
 
-Как и в случае EAP, устройство Android теперь может подключаться
-к респонденту и использовать VPN.
+Как и в случае с EAP, Android-клиент теперь может подключаться
+к ответной стороне и пользоваться VPN.
 
 <h3 id="clientwindows">С клиентом Windows</h3>
-
 Windows 7 и более поздние версии предоставляют инициатор
 IKEv2, который также требует использования сертификатов X.509, 
 которые необходимо экспортировать в виде пакетов .pfx / .p12 и
 импортировать в хранилище сертификатов локального компьютера
-(не учетной записи пользователя), оба для ЦС. и клиент, либо
+(не учетной записи пользователя), оба для CA. и клиент, либо
 используя графическую консоль управления Microsoft (введите mmc
 в командной строке и добавьте оснастку «Сертификаты» в качестве
 учетной записи компьютера), либо команду certutil с Windows 10.
-Импортируйте c
-<code>ca.crt</code> 
-в 
-<i>certificate authority</i>
-и
-<code>ClientIP.p12</code>  
-в
-<i>personal</i> store.
-
+Импортируйте c <code>ca.crt</code> в <i>certificate authority</i>
+и <code>ClientIP.p12</code> в <i>personal</i> store.
 
 У проекта StrongSwan есть хорошая документация по этой
 теме со скриншотами.
 <a href="https://wiki.strongswan.org/projects/strongswan/wiki/Win7Certs">StrongSwan</a>
 
 <p>
-В Windows нелегко разрешить установку параметра
-<code>srcid</code>
+В Windows нелегко разрешить установку параметра <code>srcid</code>
 для клиента, поэтому поле CN сертификата клиента должно
 соответствовать полному доменному имени клиента, отправляемому
-респонденту, или его IP-адресу по умолчанию. Также требуется, чтобы 
-<code>srcid</code>
-на респонденте соответствовал 
-<code>srcid</code>
-доменному имени респондента (или его IP, если не
-используется полное доменное имя) - в противном случае
-может возникнуть страшная 
-<code>error 3801</code>.
+респонденту, или его IP-адресу по умолчанию.
+Также требуется, чтобы  <code>srcid</code> на респонденте соответствовал
+<code>srcid</code> доменному имени респондента
+(или его IP, если не используется полное доменное имя) - в противном случае
+может возникнуть страшная <code>error 3801</code>.
+
 Проект Libreswan содержит ценные сведения
 <a href="https://libreswan.org/wiki/VPN_server_for_remote_clients_using_IKEv2#Common_Windows_7_client_errors">valuable details</a>
 o об этих требованиях 
@@ -512,7 +500,8 @@ o об этих требованиях
       при подключении
 </ul>
 
-Файл конфигурации респондента будет похож на случай Android.
+Файл конфигурации ответной стороны будет похож на уже рассматриваемый
+случай с Android-клиентом.
 
 <pre class='cmdbox'>
 user 'windows' 'password'
@@ -531,22 +520,19 @@ ikev2 'responder_eap' passive esp \
 <p>
 На момент написания статьи в текущих версиях Windows по умолчанию
 используется слабое шифрование (3DES / SHA1). 
-Это можно исправить с помощью команды PowerShell 
+Это можно исправить при помощи команды в PowerShell
 <code>Set-VpnConnectionIPsecConfiguration</code>.
 
 <h2 id="clientikev1">Подключение к IKEv1 / L2TP VPN</h2>
 
-Иногда никто не управляет сервером VPN, и ему предоставляется
-только выбор подключения к серверу IKEv1. В этом случае сторонний пакет 
-<code>xl2tpd</code> 
-необходим для работы в качестве клиента L2TP.
+Иногда нет возможности использовать IKEv2 VPN, а только IKEv1.
+В этом случае можно установить пакет <code>xl2tpd</code>, который
+можно использовать в качестве L2TP-клиента.
 
 <p>
 Сначала необходимо включить службы
 <a href="https://man.openbsd.org/isakmpd">isakmpd(8)</a> 
-и
-<code>ipsec</code>
-чтобы демон запускался и файл конфигурации
+и <code>ipsec</code>, чтобы демон запускался и файл конфигурации
 <a href="https://man.openbsd.org/ipsec.conf">ipsec.conf(5)</a>
 загружался при загрузке:
 
@@ -556,10 +542,9 @@ ikev2 'responder_eap' passive esp \
 # <b>rcctl set isakmpd flags -K</b>
 </pre>
 
-Следующая 
+Следующая конфигурация файла
 <a href="https://man.openbsd.org/ipsec.conf">ipsec.conf(5)</a>
-должна позволять подключаться к серверу IKEv1 на
-<code>A.B.C.D</code>
+должна позволять подключаться к IKEv1-серверу на <code>A.B.C.D</code>
 с предоставленным PSK, разрешая только UDP-порт 1701 для L2TP:
 
 <pre class="cmdbox">
@@ -567,13 +552,11 @@ ike dynamic esp transport proto udp from egress to A.B.C.D port l2tp \
         psk mekmitasdigoat
 </pre>
 
-Запуск  
-<a href="https://man.openbsd.org/isakmpd">isakmpd(8)</a>
-и загрузка
-<a href="https://man.openbsd.org/ipsec.conf">ipsec.conf(5)</a>
-с использованием
-<a href="https://man.openbsd.org/ipsecctl">ipsecctl(8)</a>
-должны позволить вам визуализировать настроенные сопоставления безопасности (SA) и потоки:
+Запуск <a href="https://man.openbsd.org/isakmpd">isakmpd(8)</a>
+и загрузка <a href="https://man.openbsd.org/ipsec.conf">ipsec.conf(5)</a>
+с использованием <a href="https://man.openbsd.org/ipsecctl">ipsecctl(8)</a>
+должны позволить вам визуализировать настроенные security associations (SA)
+и flows:
 
 <pre class="cmdbox">
 # <b>rcctl start isakmpd</b>
@@ -588,13 +571,11 @@ esp transport from A.B.C.D to W.X.Y.Z spi 0x0d16ad1c auth hmac-sha1 enc aes
 esp transport from W.X.Y.Z to A.B.C.D spi 0xcd0549ba auth hmac-sha1 enc aes
 </pre>
 
-Если это не так, может потребоваться настроить
-параметры фазы 1 (основной) и фазы 2 (быстрый), 
-когда обе стороны обмениваются криптографическими
-параметрами, чтобы договориться о наилучшей доступной
-комбинации. В идеале, эти параметры должны быть
-предоставлены администратором удаленного сервера
-и должны использоваться в
+Если это не так, может потребоваться настроить параметры первой (Main) и
+второй фазы (Quick), когда обе стороны обмениваются криптографическими
+параметрами, чтобы договориться о наилучшей доступной комбинации.
+В идеале, эти параметры должны быть предоставлены администратором удаленного
+сервера и должны использоваться в
 <a href="https://man.openbsd.org/ipsec.conf">ipsec.conf(5)</a>:
 
 <pre class="cmdbox">
@@ -604,17 +585,13 @@ ike dynamic esp transport proto udp from egress to A.B.C.D port l2tp \
         psk mekmitasdigoat
 </pre>
 
-После запуска и запуска туннеля IKEv1 необходимо
-настроить туннель L2TP. OpenBSD по умолчанию не
-предоставляет L2TP-клиента, поэтому требуется установка 
-<code>xl2tpd</code>
+После того как IKEv1-туннель поднят и работает, необходимо
+настроить L2TP-туннель. OpenBSD по умолчанию не предоставляет
+L2TP-клиента, поэтому требуется установка <code>xl2tpd</code>.
 
 <pre class="cmdbox">
 # <b>pkg_add xl2tpd</b>
 </pre>
 
-Обратитесь к
-<code>/usr/local/share/doc/pkg-readmes/xl2tpd</code>
-для получения инструкций о том, как правильно настроить
-клиент L2TP.
-
+Почитайте <code>/usr/local/share/doc/pkg-readmes/xl2tpd</code>, где
+содержатся инструкции о том, как правильно настроить L2TP-клиент.
