[1.548] update link(s) to faq13 - faq/faq13.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -160,24 +160,24 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq11.html#CustomizingX">Настройка X</a>
 </ul>
 
-<h3><a href="https://www.openbsd.org/faq/faq13.html">Multimedia</a></h3>
+<h3><a href="faq13.html">Мультимедиа</a></h3>
 <ul>
-<li><a href="https://www.openbsd.org/faq/faq13.html#enablerec"  >Enabling Audio Recording</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#confaudio"  >Configuring Audio Hardware</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#audiolevel" >Adjusting Audio Levels</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#usbaudio"   >Using a USB Audio Interface</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#playaudio"  >Playing Audio Files</a>
+<li><a href="faq13.html#enablerec"  >Включение аудиозаписи</a>
+<li><a href="faq13.html#confaudio"  >Настройка аудиооборудования</a>
+<li><a href="faq13.html#audiolevel" >Регулировка громкости</a>
+<li><a href="faq13.html#usbaudio"   >Использование аудиоинтерфейса USB</a>
+<li><a href="faq13.html#playaudio"  >Воспроизведение аудиофайлов</a>
 <!-- XXX
-<li><a href="https://www.openbsd.org/faq/faq13.html#playCD"     >Playing Audio CDs</a>
+<li><a href="faq13.html#playCD"     >Playing Audio CDs</a>
 XXX  -->
-<li><a href="https://www.openbsd.org/faq/faq13.html#recordaudio">Recording Audio Files</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#recordmon"  >Recording a Monitor Mix of All Audio Playback</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#audiolat"   >Lowering Audio Latency</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#audionet"   >Using Remote Audio Hardware</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#default"    >Choosing the Default Audio Device</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#audioprob"  >Debugging Audio Problems</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#midi"       >Using MIDI Instruments</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#webcam"     >Using a Webcam</a>
+<li><a href="faq13.html#recordaudio">Запись аудиофайлов</a>
+<li><a href="faq13.html#recordmon"  >Запись контрольного микса всего воспроизведения звука</a>
+<li><a href="faq13.html#audiolat"   >Снижение задержки звука</a>
+<li><a href="faq13.html#audionet"   >Использование удаленного аудиооборудования</a>
+<li><a href="faq13.html#default"    >Выбор аудиоустройства по умолчанию</a>
+<li><a href="faq13.html#audioprob"  >Отладка проблем со звуком</a>
+<li><a href="faq13.html#midi"       >Использование MIDI-инструментов</a>
+<li><a href="faq13.html#webcam"     >Использование веб-камеры</a>
 </ul>
 
 <h3><a href="faq16.html">Виртуализация</a></h3>
