[1.839] sync, update to 7.0 - ftp.html

--- a/ftp.html
+++ b/ftp.html
@@ -44,10 +44,10 @@
 	доступна коллекция FTP OpenBSD. Это может быть ссылкой, если
 	это необходимо.
 	<p>
-<li><b>/pub/OpenBSD/6.9/</b><br>
+<li><b>/pub/OpenBSD/7.0/</b><br>
 	Где можно найти последний релиз.
   <ul>
-  <!-- XXXrelease: make sure platform list is current -->
+  <!-- XXXrelease - make sure platform list is current -->
   <li><b>alpha/</b>
   <li><b>amd64/</b>
   <li><b>arm64/</b>
@@ -55,7 +55,6 @@
   <li><b>hppa/</b>
   <li><b>i386/</b>
   <li><b>landisk/</b>
-  <li><b>loongson/</b>
   <li><b>luna88k/</b>
   <li><b>macppc/</b>
   <li><b>octeon/</b>
@@ -63,9 +62,7 @@
 	Бинарные пакеты (скомпилированные порты) для установки в
 	-release или -stable системах.
   <li><b>powerpc64/</b>
-  <!--
   <li><b>riscv64/</b>
-  -->
   <li><b>sparc64/</b>
   <li><b>src.tar.gz</b><br>
 	Userland исходники, которые находятся в <code>/usr/src</code>.
@@ -85,8 +82,8 @@
 <li><b>/pub/OpenBSD/tools/</b><br>
 	Другое различные маленькие вещи.
 <p>
-<li><b>/pub/OpenBSD/6.8/</b><br>
-	Такая же структура каталогов как и для релиза 6.9, описанного выше.
+<li><b>/pub/OpenBSD/6.9/</b><br>
+	Такая же структура каталогов как и для релиза 7.0, описанного выше.
 </ul>
 
 <h3 id="prospective">Информация для планируемых/поддерживаемых зеркал</h3>
@@ -104,8 +101,8 @@
   <li>бинарники по крайней мере для <strong>двух последних релизов</strong>
   <li><strong>свежие (up-to-date) снапшоты</strong> (не старше, чем неделя)
   <li><strong>каталоги для всех проектов</strong>
-    <br>(включая OpenSSH/, OpenNTPD/, OpenBGPD/, LibreSSL/, patches/,
-         rpki-client/, syspatch/ and tools/)
+    <br>(включая OpenSSH/, OpenNTPD/, OpenBGPD/, OpenIKED, LibreSSL/,
+         patches/, rpki-client/, syspatch/ and tools/)
 </ul>
 
 Также:
